@@ -1,14 +1,20 @@
 package com.proj.tech.controller;
 
+import com.proj.tech.dao.UserDao;
 import com.proj.tech.dao.UserProfessorDao;
-import com.proj.tech.dto.User;
 import com.proj.tech.dto.UserProfessor;
 import com.proj.tech.dto.UserProfessorCommand;
+import com.proj.tech.dto.UserUpdate;
 import com.proj.tech.mapper.UserMapper;
 import com.proj.tech.mapper.UserProfessorMapper;
 import com.proj.tech.model.UserProfessorEntity;
 import com.proj.tech.security.SpringSecurityConfig;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.crypto.factory.PasswordEncoderFactories;
@@ -18,6 +24,7 @@ import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 //@PreAuthorize("hasRole('ADMIN')")
@@ -41,21 +48,64 @@ public class UserController {
 //        return "userList";
 //    }
 
+    /*
+     * Si L'utilisateur a le rôle admin, alors il on lui envoit tout les users, sinon on lui renvoit que lui dans une liste
+     */
     @GetMapping
     @ResponseBody
-    public List<User> listUsers() {
-        List<User> users = userProfessorDao.findAll().stream()
-                .map(UserMapper::of)
-                .collect(Collectors.toList());
-        System.out.println("Acceding to users page");
-        System.out.println(users);
-        return users;
+    public List<UserProfessor> listUsers() {
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        if (authentication.getAuthorities().stream().map(GrantedAuthority::getAuthority).toList().contains("ROLE_ADMIN")) {
+            System.out.println("Admin here, providing full session list");
+            return userProfessorDao.findAll().stream()
+                    .map(UserProfessorMapper::of)
+                    .toList();
+        } else {
+            System.out.println("Simple user, providing only session created by this user");
+            return List.of(UserProfessorMapper.of(userProfessorDao.findByUsername(authentication.getName())));
+
+        }
+    }
+
+    @PostMapping("/{id}")
+    @ResponseBody
+    public UserProfessor updateUser(@PathVariable Long id, @RequestBody UserUpdate userUpdate) {
+        System.out.println("Post request received");
+        UserProfessorEntity user = userProfessorDao.findById(id).get();
+        UserDetails userDetails = userDetailsService.loadUserByUsername(user.getUsername());
+        System.out.println("Json received :");
+        System.out.println(userUpdate.getProperties());
+        Map<String, Object> properties = userUpdate.getProperties();
+        PasswordEncoder encoder = PasswordEncoderFactories.createDelegatingPasswordEncoder();
+
+        if (properties.containsKey("username")) {
+            System.out.println("Changing username");
+            String newUsername = (String) properties.get("username");
+            user.setUsername(newUsername);
+            UserDetails updatedUserDetails = new User(newUsername, encoder.encode(user.getPassword()), userDetails.getAuthorities());
+            UsernamePasswordAuthenticationToken authenticationToken = new UsernamePasswordAuthenticationToken(updatedUserDetails, null, updatedUserDetails.getAuthorities());
+            SecurityContextHolder.getContext().setAuthentication(authenticationToken);
+        }
+        if (properties.containsKey("email")) {
+            System.out.println("Changing email");
+            user.setEmail((String) properties.get("email"));
+        }
+        if (properties.containsKey("password")) {
+            System.out.println("Changing password");
+            String newPassword = (String) properties.get("password");
+            user.setPassword((String) properties.get("password"));
+            UserDetails updatedUserDetails = new User(user.getUsername(), encoder.encode(newPassword), userDetails.getAuthorities());
+            UsernamePasswordAuthenticationToken authenticationToken = new UsernamePasswordAuthenticationToken(updatedUserDetails, null, updatedUserDetails.getAuthorities());
+            SecurityContextHolder.getContext().setAuthentication(authenticationToken);
+        }
+        UserProfessorEntity saved = userProfessorDao.save(user);
+        return UserProfessorMapper.of(saved);
     }
 
     @GetMapping("/{id}")
     @ResponseBody
-    public User showUser(@PathVariable Long id) {
-        User user = UserMapper.of(userProfessorDao.findById(id).get());
+    public UserProfessor showUser(@PathVariable Long id) {
+        UserProfessor user = UserProfessorMapper.of(userProfessorDao.findById(id).get());
         System.out.println("Acceding to users page");
         System.out.println(user);
         return user;
